--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.8
   dotlottie_loader: ^0.0.4
+  firebase_app_check: ^0.3.1+4
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
@@ -21,6 +22,7 @@ dependencies:
   firebase_ui_firestore: ^1.7.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.2.1
   flutter_local_notifications: ^17.2.4
   flutter_secure_storage: ^9.2.2
   flutter_svg: ^2.0.10+1
